app/knative-sb-rest.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: sb-serverless-client
  namespace: pipelines-ws-tekton
spec:
  template:
    spec:
      containers:
        # Replace {username} with your repository username
        - image: quay.io/rralhan/s2i-tekton:latest
      imagePullSecrets:
      - name: quay-auth-secret
